syntax = "proto3";

package google.events.cloud.firestore.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/type/latlng.proto";

message DocumentEventData {
  Document value = 1;
  Document old_value = 2;
  DocumentMask update_mask = 3;
}

message DocumentMask {
  repeated string field_paths = 1;
}

message Document {
  string name = 1;
  map<string, Value> fields = 2;
  google.protobuf.Timestamp create_time = 3;
  google.protobuf.Timestamp update_time = 4;
}

message Value {
  oneof value_type {
    google.protobuf.NullValue null_value = 11;
    bool boolean_value = 1;
    int64 integer_value = 2;
    double double_value = 3;
    google.protobuf.Timestamp timestamp_value = 10;
    string string_value = 17;
    bytes bytes_value = 18;
    string reference_value = 5;
    google.type.LatLng geo_point_value = 8;
    ArrayValue array_value = 9;
    MapValue map_value = 6;
  }
}

message ArrayValue {
  repeated Value values = 1;
}

message MapValue {
  map<string, Value> fields = 1;
}
